fixed typo in my comment

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 			<div class="clear"></div>
 		</main>
-	<!-- deciding on using the header and article header HTML5 element. Deecded to use same element but add class to article one-->
+	<!-- deciding on using the header and article header HTML5 element. Decided to use same element but add class to article one-->
 	
     <div><p id="myName">Name</p></div>
 	<script>
